--- a/src/PaP/BackBundle/Resources/views/Announcement/index.html.twig
+++ b/src/PaP/BackBundle/Resources/views/Announcement/index.html.twig
@@ -19,9 +19,9 @@
                     <thead>
                     <tr class="bg-light">
                         <th class="text-center">Select</th>
-                        <th class="">Title</th>
+                        <th class="">Id</th>
                         <th class="">Image</th>
-                        <th class="">City CP</th>
+                        <th class="">Title</th>
                         <th class="">Ref</th>
                         <th class="">Price</th>
 
@@ -40,9 +40,9 @@
                                 </label>
                             </td>
 
-                            <td class="">{{ offer.price }}</td>
+                            <td class="">{{ offer.id }}</td>
+                            <td class=""><img class="img-responsive img-circle" src="{{ asset("uploads/announcement/" ~ offer.photo) }}" style="width: 50px; height: 50px" /></td>
                             <td class="">{{ offer.title }}</td>
-                            <td class=""><img class="img-responsive img-circle" src="{{ asset("uploads/announcement/" ~ offer.photo) }}" /></td>
                             <td class="">{{ offer.ref }}</td>
                             <td class="">{{ offer.price }}</td>
 
