--- a/src/PaP/BackBundle/Resources/views/Announcement/index.html.twig
+++ b/src/PaP/BackBundle/Resources/views/Announcement/index.html.twig
@@ -53,7 +53,7 @@
                                     <i class="fa fa-eye"></i>
                                 </a>
 
-                                <a href="{{  path("back_announcement_edit",{'id':offer.id} ) }}" data-original-title="edit" data-toggle="tooltip" data-placement="top" class="btn menu-icon vd_bd-yellow vd_yellow">
+                                <a href="{{  path("back_announcement_edit",{'offer':offer.id} ) }}" data-original-title="edit" data-toggle="tooltip" data-placement="top" class="btn menu-icon vd_bd-yellow vd_yellow">
                                     <i class="fa fa-pencil"></i>
                                 </a>
 
