--- a/src/PaP/BackBundle/Resources/views/Announcement/create.html.twig
+++ b/src/PaP/BackBundle/Resources/views/Announcement/create.html.twig
@@ -6,6 +6,7 @@
  {{ parent() }}
 
     ￼￼    <link rel="stylesheet" href="{{asset('vendor/plugins/select2/css/core.css')}}">
+    ￼￼    <link rel="stylesheet" href="{{asset('dist/datetimepicker/jquery.datetimepicker.css')}}">
 
 
 {% endblock %}
@@ -40,6 +41,7 @@
 
    <script src="{{asset('vendor/plugins/select2/select2.min.js')}}"></script>
    <script src="{{asset('dist/js/main.min.js')}}"></script>
+   <script src="{{asset('dist/datetimepicker/jquery.datetimepicker.js')}}"></script>
 
 {% endblock%}
 
